--- a/prod/sass/partial/page-sitio.scss
+++ b/prod/sass/partial/page-sitio.scss
@@ -191,7 +191,7 @@
            								border:{style:solid;width:1px;color:$colorGrey;}
            								margin:{top:0;right:11px;bottom:20px;left:0;}
            								@include gridle(3.7, desktopess);
-           								@include gridle(3.5, notebook-min);
+           								@include gridle(3.8, notebook-min);
            								@include gridle_state(notebook-min) {
            									padding: 0;
            								}
@@ -201,7 +201,6 @@
            								@include gridle_state(phoness-min) {
            									margin: {left:auto;right:auto;}
            								}
-           								float: none;
            								text:{align:left;}
            								h3 {
            									@include gridle(12);
@@ -219,6 +218,12 @@
 	           								@include gridle_state(phoness) {
 	           									font:{size:em(16px) !important;}
 	           								}
+           								}
+           								.price {
+           									@include gridle(12);
+           									font:{size:1.2em;weight:bold;}
+           									color:$first_color;
+           									text:{align:center;}
            								}
            								small {
            									@extend h3;
@@ -238,16 +243,32 @@
 											border-radius: 0;
     										color:$second_color;
     										font:{size:em(13px) !important;weight:700;}
-    										padding: 10px;
+    										padding: 13px 0;
     										margin: 10px;
     										display: block;
     										text:{align: center;}
     										@include gridle(11, phoness);
            								}
+           								.added_to_cart {
+           									@include gridle(10);
+											background:$colorWhite;
+											border:1px solid $first_color;
+											border-radius: 0;
+    										color:$first_color;
+    										font:{size:em(13px) !important;weight:700;}
+    										padding: 13px 0;
+    										margin: {top:0;right:10px;bottom:10px;left:10px;}
+    										display: block;
+    										text:{align: center;}
+    										@include gridle(11, phoness);
+           								}
            								img {
-           									width: auto;
+           									width:100%;
 											height: 150px;
 											margin: auto;
+           								}
+           								&:last-child  {
+           									margin:{right:0;}
            								}
 									}
 								}
@@ -311,8 +332,67 @@
 										font:{size:14px;}
 									}
 								}
+								#datepicker-calendar {
+									background:$second_color;
+									border-radius:0;
+									.datepickerContainer {
+										@include gridle(12);
+										@extend .no-paddings;
+										table {
+											@include gridle(12);
+											@extend .no-paddings;
+											.datepickerBlock {
+												table {
+													thead {
+														th {
+															background:#F2F2F2;	
+															.datepickerMonth {
+																color :$first_color;
+															}
+														}
+														.datepickerDoW {
+															th {
+																span {
+																	font:{weight:lighter;}
+																}
+															}
+														}
+													}
+													tbody {
+														tr{
+															td {
+																&.datepickerSelected {
+																	background:#585858;
+																}
+																&.datepickerNotInMonth {
+																	&.datepickerDisabled {
+																		background:$colorWhite;
+																		&:hover {
+																			background:none;
+																		}
+																	}
+																}	
+															} 
+														}
+														&.datepickerDays {
+															tr {
+																td {
+																	&:hover {
+																		background:#F8ECE0;
+																	} 
+																}
+															}
+														}
+													}
+												}	 
+											}
+										}
+									}
+								}
 								.dp-desplegable {
 									z-index: 99;
+									background:$second_color;
+									border-radius:0;
 									@include gridle_state(phoness-min) {
 										width: 100% !important;
 										overflow: scroll !important;
