--- a/prod/sassmp/mplace/_cart.scss
+++ b/prod/sassmp/mplace/_cart.scss
@@ -25,12 +25,15 @@
 							margin:{bottom:5px;}
 						}
 						@include media($notebook) {
-							@include span-columns(4);
+							@include span-columns(6);
+						} 
+						label {
+							@include span-columns(12);
 						}
 						.input-text {
 							width: 50% !important;
 							height: 36px;
-							margin: 0;
+							margin: 0; 
 		    				@include media($notebook) {
 								width: 50% !important;
 								height: 37px;
@@ -53,6 +56,7 @@
 					border-radius: 0;
 					font:{family:$primaryFont;}
 					color:$colorWhite;
+					float: right;
 				}
 				.cart-collaterals {
 					.cart_totals  {
