--- a/app/wp-content/themes/Mediakit/css/marketplace.css
+++ b/app/wp-content/themes/Mediakit/css/marketplace.css
@@ -378,6 +378,42 @@ header {
       margin-left: 0; }
       .sidebar .widget_shopping_cart_content .cart_list li:last-child {
         margin-right: 0; }
+      @media screen and (min-width: 30em) and (max-width: 43.125em) {
+        .sidebar .widget_shopping_cart_content .cart_list li {
+          float: left;
+          display: block;
+          margin-right: 2.35765%;
+          width: 31.76157%; }
+          .sidebar .widget_shopping_cart_content .cart_list li:last-child {
+            margin-right: 0; }
+          .sidebar .widget_shopping_cart_content .cart_list li:nth-child(3n) {
+            margin-right: 0; }
+          .sidebar .widget_shopping_cart_content .cart_list li:nth-child(3n+1) {
+            clear: left; } }
+      @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+        .sidebar .widget_shopping_cart_content .cart_list li {
+          float: left;
+          display: block;
+          margin-right: 2.35765%;
+          width: 31.76157%; }
+          .sidebar .widget_shopping_cart_content .cart_list li:last-child {
+            margin-right: 0; }
+          .sidebar .widget_shopping_cart_content .cart_list li:nth-child(3n) {
+            margin-right: 0; }
+          .sidebar .widget_shopping_cart_content .cart_list li:nth-child(3n+1) {
+            clear: left; } }
+      @media screen and (min-width: 64em) and (max-width: 79.9375em) {
+        .sidebar .widget_shopping_cart_content .cart_list li {
+          float: left;
+          display: block;
+          margin-right: 2.35765%;
+          width: 23.23176%; }
+          .sidebar .widget_shopping_cart_content .cart_list li:last-child {
+            margin-right: 0; }
+          .sidebar .widget_shopping_cart_content .cart_list li:nth-child(4n) {
+            margin-right: 0; }
+          .sidebar .widget_shopping_cart_content .cart_list li:nth-child(4n+1) {
+            clear: left; } }
       .sidebar .widget_shopping_cart_content .cart_list li a {
         padding-top: 10px;
         overflow: hidden;
@@ -391,7 +427,7 @@ header {
           color: black !important;
           height: 30px; }
         .sidebar .widget_shopping_cart_content .cart_list li a img {
-          margin: 0 auto;
+          margin: 10px auto;
           width: 70%;
           float: none;
           display: block; }
@@ -455,6 +491,9 @@ header {
         clear: left; }
   .sidebar .widget_recently_viewed_products ul li {
     padding: 10px 0 !important; }
+    @media screen and (min-width: 80em) {
+      .sidebar .widget_recently_viewed_products ul li {
+        padding: 14px 0 !important; } }
 
 .footer {
   float: left;
@@ -584,7 +623,8 @@ header {
       border-color: #626262;
       position: relative;
       padding: 10px !important;
-      margin-bottom: 0; }
+      margin-bottom: 10px;
+      display: inline-block; }
       @media screen and (min-width: 30em) and (max-width: 43.125em) {
         .content .products li {
           width: 48% !important; }
@@ -802,6 +842,22 @@ header {
   position: relative; }
   .content-single .img-single:last-child {
     margin-right: 0; }
+  @media screen and (min-width: 30em) and (max-width: 43.125em) {
+    .content-single .img-single {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%; }
+      .content-single .img-single:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+    .content-single .img-single {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%; }
+      .content-single .img-single:last-child {
+        margin-right: 0; } }
   @media screen and (min-width: 64em) and (max-width: 79.9375em) {
     .content-single .img-single {
       float: left;
@@ -818,7 +874,7 @@ header {
       width: 48.82117%; }
       .content-single .img-single:last-child {
         margin-right: 0; } }
-  .content-single .img-single a {
+  .content-single .img-single .woocommerce-main-image {
     text-align: right;
     float: left;
     display: block;
@@ -827,7 +883,7 @@ header {
     width: 100%;
     height: auto;
     display: block; }
-    .content-single .img-single a:last-child {
+    .content-single .img-single .woocommerce-main-image:last-child {
       margin-right: 0; }
   .content-single .img-single img {
     float: left;
@@ -838,6 +894,29 @@ header {
     background-color: #f6f6f6; }
     .content-single .img-single img:last-child {
       margin-right: 0; }
+  .content-single .img-single .thumbnails {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%; }
+    .content-single .img-single .thumbnails:last-child {
+      margin-right: 0; }
+    .content-single .img-single .thumbnails a {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 23.23176%;
+      display: inline-block; }
+      .content-single .img-single .thumbnails a:last-child {
+        margin-right: 0; }
+      .content-single .img-single .thumbnails a:nth-child(4n) {
+        margin-right: 0; }
+      .content-single .img-single .thumbnails a:nth-child(4n+1) {
+        clear: left; }
+      .content-single .img-single .thumbnails a img {
+        width: 100%;
+        height: auto;
+        display: block; }
 .content-single .info-content {
   float: left;
   display: block;
@@ -846,6 +925,24 @@ header {
   margin-right: 0; }
   .content-single .info-content:last-child {
     margin-right: 0; }
+  @media screen and (min-width: 30em) and (max-width: 43.125em) {
+    .content-single .info-content {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%;
+      margin-right: 0; }
+      .content-single .info-content:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+    .content-single .info-content {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%;
+      margin-right: 0; }
+      .content-single .info-content:last-child {
+        margin-right: 0; } }
   @media screen and (min-width: 64em) and (max-width: 79.9375em) {
     .content-single .info-content {
       float: left;
@@ -1041,50 +1138,118 @@ header {
       .related.products {
         padding: 20px 0; } }
 
-.pp_pic_holder {
+.pp_pic_holder .pp_content_container .pp_details .pp_nav .pp_arrow_previous {
+  float: none;
+  display: inline-block; }
+.pp_pic_holder .pp_content_container .pp_details .pp_nav .currentTextHolder {
+  float: none;
+  display: inline-block;
+  font-size: 1.5em; }
+.pp_pic_holder .pp_content_container .pp_details .pp_nav .pp_arrow_next {
+  float: none;
+  display: inline-block; }
+
+.pp_woocommerce {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%;
   width: 900px !important;
   margin: 0 auto;
   display: block;
   left: 0 !important;
   right: 0 !important;
   top: 200px !important; }
-  .pp_pic_holder .ppt {
+  .pp_woocommerce:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 30em) and (max-width: 43.125em) {
+    .pp_woocommerce {
+      top: 15px !important; } }
+  @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+    .pp_woocommerce {
+      width: 600px !important; } }
+  @media screen and (min-width: 64em) and (max-width: 79.9375em) {
+    .pp_woocommerce {
+      top: 60px !important;
+      width: 600px !important; } }
+  @media screen and (min-width: 80em) {
+    .pp_woocommerce {
+      top: 80px !important; } }
+  @media screen and (min-width: 90em) {
+    .pp_woocommerce {
+      top: 100px !important; } }
+  .pp_woocommerce .ppt {
     font-family: "Montserrat", sans-serif !important;
     text-transform: uppercase;
     margin: 0; }
-  .pp_pic_holder .pp_content_container {
+  .pp_woocommerce .pp_content_container {
     border-radius: 0 !important; }
-    .pp_pic_holder .pp_content_container .pp_content {
-      max-width: 70%;
-      margin-left: auto;
-      margin-right: auto;
-      width: 70% !important; }
-      .pp_pic_holder .pp_content_container .pp_content::after {
-        clear: both;
-        content: "";
-        display: table; }
-      .pp_pic_holder .pp_content_container .pp_content #pp_full_res img {
-        width: 60% !important;
-        height: auto !important;
-        display: block;
-        margin: 0 auto; }
-    .pp_pic_holder .pp_content_container .pp_details {
-      margin: 0 auto;
-      float: none;
-      width: 300px !important;
-      text-align: center; }
-      .pp_pic_holder .pp_content_container .pp_details .pp_nav {
-        width: 100%; }
-        .pp_pic_holder .pp_content_container .pp_details .pp_nav .pp_arrow_previous {
-          float: none;
-          display: inline-block; }
-        .pp_pic_holder .pp_content_container .pp_details .pp_nav .currentTextHolder {
-          float: none;
-          display: inline-block;
-          font-size: 1.5em; }
-        .pp_pic_holder .pp_content_container .pp_details .pp_nav .pp_arrow_next {
-          float: none;
-          display: inline-block; }
+    .pp_woocommerce .pp_content_container .pp_left {
+      padding: 0; }
+      .pp_woocommerce .pp_content_container .pp_left .pp_right {
+        padding: 0; }
+        @media screen and (min-width: 30em) and (max-width: 43.125em) {
+          .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_top {
+            height: 5px; } }
+        .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content {
+          width: 90% !important;
+          margin: 0 auto; }
+          @media screen and (min-width: 30em) and (max-width: 43.125em) {
+            .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content {
+              width: 40% !important; } }
+          .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade #pp_full_res {
+            width: 100% !important; }
+            @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+              .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade #pp_full_res {
+                width: 90% !important;
+                margin: 0 auto; } }
+            @media screen and (min-width: 64em) and (max-width: 79.9375em) {
+              .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade #pp_full_res {
+                width: 90% !important;
+                margin: 0 auto; } }
+            @media screen and (min-width: 80em) {
+              .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade #pp_full_res {
+                width: 60% !important;
+                margin: 0 auto; } }
+            @media screen and (min-width: 90em) {
+              .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade #pp_full_res {
+                width: 60% !important;
+                margin: 0 auto; } }
+            .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade #pp_full_res img {
+              width: 100% !important;
+              height: auto !important;
+              display: block;
+              margin: 0 auto; }
+          .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade .pp_details {
+            float: left;
+            display: block;
+            margin-right: 2.35765%;
+            width: 100%;
+            margin: 0 auto;
+            float: initial;
+            width: 300px !important;
+            text-align: center; }
+            .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade .pp_details:last-child {
+              margin-right: 0; }
+            .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade .pp_details .pp_nav {
+              width: 100%;
+              position: absolute;
+              left: 0;
+              right: 0;
+              margin: 0;
+              bottom: -75px; }
+              .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade .pp_details .pp_nav .currentTextHolder {
+                color: white; }
+              .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade .pp_details .pp_nav .pp_arrow_previous {
+                float: none;
+                display: inline-block; }
+              .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade .pp_details .pp_nav .currentTextHolder {
+                float: none;
+                display: inline-block;
+                font-size: 1.5em; }
+              .pp_woocommerce .pp_content_container .pp_left .pp_right .pp_content .pp_fade .pp_details .pp_nav .pp_arrow_next {
+                float: none;
+                display: inline-block; }
 
 .content.no-sidebar {
   max-width: 95%;
@@ -1133,24 +1298,93 @@ header {
         float: left;
         display: block;
         margin-right: 2.35765%;
-        width: 100%; }
+        width: 100%;
+        margin-bottom: 5px; }
         .content.no-sidebar .parrafos .woocommerce table .coupon label:last-child {
           margin-right: 0; }
+        @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+          .content.no-sidebar .parrafos .woocommerce table .coupon label {
+            margin-bottom: 10px; } }
       .content.no-sidebar .parrafos .woocommerce table .coupon .input-text {
         width: 50% !important;
-        height: 36px;
+        height: 29px;
         margin: 0; }
+        @media screen and (min-width: 30em) and (max-width: 43.125em) {
+          .content.no-sidebar .parrafos .woocommerce table .coupon .input-text {
+            height: 31px; } }
+        @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+          .content.no-sidebar .parrafos .woocommerce table .coupon .input-text {
+            height: 35px; } }
         @media screen and (min-width: 80em) {
           .content.no-sidebar .parrafos .woocommerce table .coupon .input-text {
             width: 50% !important;
             height: 37px;
             margin-right: 5px; } }
       .content.no-sidebar .parrafos .woocommerce table .coupon .button {
-        width: 49% !important; }
+        width: 49% !important;
+        padding: 10px;
+        margin-bottom: 5px; }
+        @media screen and (min-width: 80em) {
+          .content.no-sidebar .parrafos .woocommerce table .coupon .button {
+            padding: 12px !important; } }
     .content.no-sidebar .parrafos .woocommerce table .remove {
       color: black !important; }
       .content.no-sidebar .parrafos .woocommerce table .remove:hover {
         background: none; }
+    .content.no-sidebar .parrafos .woocommerce table thead {
+      font-size: 0.6em; }
+      @media screen and (min-width: 30em) and (max-width: 43.125em) {
+        .content.no-sidebar .parrafos .woocommerce table thead {
+          font-size: 0.8em; } }
+      @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+        .content.no-sidebar .parrafos .woocommerce table thead {
+          font-size: 0.9em; } }
+      @media screen and (min-width: 64em) and (max-width: 79.9375em) {
+        .content.no-sidebar .parrafos .woocommerce table thead {
+          font-size: 1em; } }
+      @media screen and (min-width: 80em) {
+        .content.no-sidebar .parrafos .woocommerce table thead {
+          font-size: 1em; } }
+    .content.no-sidebar .parrafos .woocommerce table tbody {
+      font-size: 0.6em; }
+      @media screen and (min-width: 30em) and (max-width: 43.125em) {
+        .content.no-sidebar .parrafos .woocommerce table tbody {
+          font-size: 0.8em; } }
+      @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+        .content.no-sidebar .parrafos .woocommerce table tbody {
+          font-size: 0.9em; } }
+      @media screen and (min-width: 64em) and (max-width: 79.9375em) {
+        .content.no-sidebar .parrafos .woocommerce table tbody {
+          font-size: 0.9em; } }
+      @media screen and (min-width: 80em) {
+        .content.no-sidebar .parrafos .woocommerce table tbody {
+          font-size: 0.9em; } }
+      .content.no-sidebar .parrafos .woocommerce table tbody .product-remove {
+        padding: 6px; }
+      .content.no-sidebar .parrafos .woocommerce table tbody .product-thumbnail {
+        padding: 6px; }
+      .content.no-sidebar .parrafos .woocommerce table tbody .product-price {
+        padding: 6px; }
+      .content.no-sidebar .parrafos .woocommerce table tbody .product-quantity {
+        padding: 6px; }
+      .content.no-sidebar .parrafos .woocommerce table tbody .product-subtotal {
+        padding: 6px; }
+    .content.no-sidebar .parrafos .woocommerce table.shop_table .button {
+      font-size: 1.2em;
+      padding: 10px; }
+      @media screen and (min-width: 30em) and (max-width: 43.125em) {
+        .content.no-sidebar .parrafos .woocommerce table.shop_table .button {
+          font-size: 1em; } }
+      @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+        .content.no-sidebar .parrafos .woocommerce table.shop_table .button {
+          font-size: 1em; } }
+      @media screen and (min-width: 64em) and (max-width: 79.9375em) {
+        .content.no-sidebar .parrafos .woocommerce table.shop_table .button {
+          font-size: 0.9em; } }
+      @media screen and (min-width: 80em) {
+        .content.no-sidebar .parrafos .woocommerce table.shop_table .button {
+          font-size: 0.9em;
+          padding: 12px 40px; } }
   .content.no-sidebar .parrafos .woocommerce .button {
     background: black;
     border-radius: 0;
@@ -1166,6 +1400,32 @@ header {
     text-align: right; }
   .content.no-sidebar .parrafos .woocommerce .cart-collaterals .order-total {
     text-align: right; }
+  .content.no-sidebar .parrafos .wc-proceed-to-checkout a {
+    font-size: 0.8em;
+    padding: 10px; }
+    @media screen and (min-width: 48em) and (max-width: 63.9375em) {
+      .content.no-sidebar .parrafos .wc-proceed-to-checkout a {
+        font-size: 1em; } }
+    @media screen and (min-width: 64em) and (max-width: 79.9375em) {
+      .content.no-sidebar .parrafos .wc-proceed-to-checkout a {
+        font-size: 1em; } }
+    @media screen and (min-width: 80em) {
+      .content.no-sidebar .parrafos .wc-proceed-to-checkout a {
+        font-size: 1em; } }
+  .content.no-sidebar .parrafos .woocommerce-error {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%;
+    background: none !important;
+    border: 1px solid black !important;
+    border-top: 6px solid black !important; }
+    .content.no-sidebar .parrafos .woocommerce-error:last-child {
+      margin-right: 0; }
+    .content.no-sidebar .parrafos .woocommerce-error:before {
+      color: black !important; }
+    .content.no-sidebar .parrafos .woocommerce-error li {
+      margin: 5px 0; }
   .content.no-sidebar .parrafos .btn {
     border: 1px solid black;
     float: left;
