--- a/prod/sass/partial/header.scss
+++ b/prod/sass/partial/header.scss
@@ -1,14 +1,25 @@
 .wrapper {
 	background:$bg-color; 
-	position:relative;
 	overflow:scroll;
 	overflow-x:hidden;
 	@include gridle(12);
 	@extend .no-paddings;
 	height: 100% !important;
-	@include gridle_state(phoness tabless-min){
+	position: absolute;
+	padding:{top:45px !important;}
+	@include gridle_state(phoness){
 		overflow:hidden;
-		padding:10px !important;
+		padding:{top:55px !important;right:0 !important; bottom:10px !important; left:0 !important;}
+	}
+	@include gridle_state(phoness-min){
+		overflow:hidden;
+		padding:{top:45px !important;right:10px !important; bottom:10px !important; left:10px !important;}
+	}
+	@include gridle_state(tabless-md) {
+		padding:{top:55px !important;}
+	}
+	@include gridle_state(notebook-min) {
+		padding:{top:0 !important;}
 	}
 	.page-header {
 		height: 370px;
