--- a/prod/sass/partial/vars.scss
+++ b/prod/sass/partial/vars.scss
@@ -11,7 +11,7 @@ $colorWhite:rgb(255,255,255);
 $colorGrey:rgb(98,98,98);
 $colorGrey2:rgb(246,246,246);
 
-$bg-color:#e7e7e7;
+$bg-color:#f4f4f4;
 $font-color:#8b91a0;
 $li-border-color:#e5e9ec;
 
