--- a/prod/sassmp/mplace/_sidebar.scss
+++ b/prod/sassmp/mplace/_sidebar.scss
@@ -25,6 +25,18 @@
                 padding: 10px !important;
                 border: 1px solid $colorGrey2;
                 margin:{top:10px;right: 10px;bottom: 10px;left: 0;}
+                @include media($mobileLand) {
+                     @include span-columns(4);
+                     @include omega(3n);
+                }
+                @include media($tablet) {
+                     @include span-columns(4);
+                     @include omega(3n);  
+                }
+                @include media($tabletLand) {
+                     @include span-columns(3);
+                     @include omega(4n);  
+                }
                 a{
                     &.remove{
                         background:transparent;
@@ -39,7 +51,7 @@
                     text-overflow: ellipsis;
                     white-space: nowrap;
                     img{
-                        margin: 0 auto;
+                        margin: 10px auto;
                         width:70%;
                         float: none;
                         display: block;
@@ -86,6 +98,9 @@
         ul {
             li {
                 padding:10px 0 !important;
+                @include media($notebook) {
+                    padding:14px 0 !important; 
+                }
             }
         }
     }
